--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "arsh-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,8 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.0",
-    "gsap": "^3.13.0",
-    "three": "^0.181.2"
+    "@astrojs/tailwind": "^5.1.4",
+    "@emailjs/browser": "^4.4.1",
+    "astro": "^5.16.3",
+    "gsap": "^3.12.5",
+    "tailwindcss": "^3.4.17",
+    "three": "^0.171.0",
+    "vanilla-tilt": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/three": "^0.171.0"
   }
 }
