--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   portfolio:
-    container_name: portfolio_site
+    container_name: portfolio
     build: .
     restart: unless-stopped
 
