--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
-    "@types/three": "^0.171.0"
+    "@types/three": "^0.171.0",
+    "baseline-browser-mapping": "^2.10.0"
   }
 }
